= {project-name} Changelog
:project-name: Asciidoctor FB2
:project-handle: asciidoctor-fb2
:slug: slonopotamus/{project-handle}
:uri-project: https://github.com/{slug}

This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {uri-project}/commits/master[commit history] on GitHub.

== Unreleased

* add support for table captions

== 0.2.3 (2020-11-24) - @slonopotamus

* add support for literal blocks
* fix crash for `menu` inline macro without submenu. https://github.com/slonopotamus/asciidoctor-fb2/issues/15[#15]
* add initial support for sidebar

== 0.2.2 (2020-11-24) - @slonopotamus

* do not crash on inline line break macro. https://github.com/slonopotamus/asciidoctor-fb2/issues/14[#14]
* add support for verses
* add support for quotes

== 0.2.1 (2020-11-24) - @slonopotamus

* add support for `kbd` inline macro. https://github.com/slonopotamus/asciidoctor-fb2/issues/13[#13]
* add support for `btn` inline macro

== 0.2.0 (2020-11-23) - @slonopotamus

* add support for cover image via `+:front-cover-image:+` attribute. https://github.com/slonopotamus/asciidoctor-fb2/issues/3[#3]
* update fb2rb to 0.3.0
* add support for nested lists. https://github.com/slonopotamus/asciidoctor-fb2/issues/2[#2]
* output uncompressed book if filename doesn't end with `.zip`
* add support for `menu` inline macro. https://github.com/slonopotamus/asciidoctor-fb2/issues/12[#12]

== 0.1.0 (2020-07-24) - @slonopotamus

* initial release