@@ -10,6 +10,7 @@ For a detailed view of what has changed, refer to the {uri-project}/commits/mast
 == Unreleased
 
 * add support for table captions
+* fix images from subfolders not loaded in Calibre
 
 == 0.2.3 (2020-11-24) - @slonopotamus
 
